45
================

06/09/21 Online form: create incident not using default
04/09/21 Update diary link info for non-animals when record is updated #1029
04/09/21 Warning when adopting an animal with outstanding meds #959
03/09/21 Ability to make rota work types inactive #1050
02/09/21 Add radius attribute to SavourLife
30/08/21 PetFinder allow additional fields for colors/coat_length #767
30/08/21 Remove use of HTML entities at the backend #1038
30/08/21 Use ILIKE when available for performance/indexes #1038
30/08/21 Support for translating db html entities #1038
29/08/21 Remove cruft and support for python 2 #1037
29/08/21 Fix log sorting with date/time #1047
26/08/21 Adoption self-checkout service #784
25/08/21 Animal find/search updates ages in results
23/08/21 Refactor sign_document_page into separate js file
20/08/21 Option to email online forms to adoption coordinator #1042
20/08/21 Adoptable status flag for reporting #1045
19/08/21 Disable non-functional report toolbar for charts #1041
16/08/21 Add current vet as a suggested email from animal
12/08/21 Annual figures return count including non-adoptions
11/08/21 Show receipt numbers with transactions
11/08/21 Option to show waiting list number in columns
06/08/21 Only set default death reason if deceased date was blank
06/08/21 Don't update lastchanged person on reparented/merged records
30/07/21 Option to view returned equipment loans
23/07/21 adoptable_js: Support full size images
14/07/21 OriginalOwner should always sync to Owner on non-shelter
13/07/21 Rename trap loan wordkeys to equipment, update manual #775
13/07/21 Add <<OwnerSite>> key for person documents
08/07/21 Do not load report toolbar with subreports
08/07/21 Prevent report toolbar loading multiple times
08/07/21 Allow hidden config for date diff cutoffs
08/07/21 Remove inactive log types from log type filter
07/07/21 Mandatory handling for Yes/No (Jacob Sabella) #1028
06/07/21 Separate permissions for import/export CSV #1024