@@ -1,6 +1,7 @@
 45
 ================
 
+07/09/21 Add locale for en_TZ (Tanzania)
 06/09/21 Online form: create incident not using default
 04/09/21 Update diary link info for non-animals when record is updated #1029
 04/09/21 Warning when adopting an animal with outstanding meds #959
